--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
             <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="#Research">Research</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -45,7 +45,7 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h1 class="page-header">Portfolio Item <small>Explain Your Work</small></h1>
+          <h1 class="page-header">Attari Research Group <small>Meso-scale Modeling of Response of Materials</small></h1>
         </div>
 
       </div>
@@ -57,14 +57,15 @@
         </div>
 
         <div class="col-md-4">
-          <h3>Project Description</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-          <h3>Project Details</h3>
+          <h3>Research Focus</h3>
+          <p>I have obtained my Ph.D. degree from the Texas A&M University under the supervision of Professor Raymundo Arroyave in 2019. Following my doctoral studies, I joined as a postdoctoral fellow at the group of Prof. Raymundo Arroyave. Later I continued my postdoctoral research at the REMIND (Reconfigurable Electronic Materials Inspired by Nonlinear Neuron Dynamics) Energy Frontier Research Center (EFRC), sponsored by the U.S. Department of Energy, housed at Texas A&M University where I collaborated under the guidance of Professors Raymundo Arroyave and Sarbajit Banerjee. Currently, I am a Research Assistant Professor at Texas A&M University, concurrently serving as the Director of Operations at the <a href="https://birdshot.tamu.edu/">BIRDSHOT Center</a>, dedicated to High-Throughput Materials Discovery for Extreme Conditions (HTMDEC).</p>
+          </p>
+          <h3>Research Focus</h3>
           <ul>
-            <li>Lorem Ipsum</li>
-            <li>Dolor Sit Amet</li>
-            <li>Consectetur</li>
-            <li>Adipiscing Elit</li>
+            <li>Microstructure-sensitive Design of Materials</li>
+            <li>Electronic Interconnects</li>
+            <li>Thermoelectric Materials and Power Generation</li>
+            <li>Nanostructure and Microstructure Engineering</li>
           </ul>
         </div>
 
@@ -73,13 +74,15 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h3 class="page-header">Related Projects</h3>
+          <h3 class="page-header">Related Information</h3>
         </div>
 
         <div class="col-sm-3 col-xs-6">
-        	<a href="#"><img class="img-responsive portfolio-item" src="http://placehold.it/500x300"></a>
+          <a href="IMAGE_URL_HERE">
+            <img class="img-responsive portfolio-item" src="images/solder_interconnect_interfacial_phase_growth.png" alt="Image Description" title="Cu/Sn/Cu Solder Interconnects" style="width: 500px; height: 300px;">
+          </a>
         </div>
-
+        
         <div class="col-sm-3 col-xs-6">
         	<a href="#"><img class="img-responsive portfolio-item" src="http://placehold.it/500x300"></a>
         </div>
@@ -103,7 +106,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; Company 2013</p>
+            <p>Copyright &copy; All Rights Reserved 2024</p>
           </div>
         </div>
       </footer>
