--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
         <div class="col-md-4">
           <h3>Research Focus</h3>
           <p>I have obtained my Ph.D. degree from the Texas A&M University under the supervision of Professor Raymundo Arroyave in 2019. Following my doctoral studies, I joined as a postdoctoral fellow at the group of Prof. Raymundo Arroyave. Later I continued my postdoctoral research at the <a href="https://remind.engr.tamu.edu/">reMIND</a> (Reconfigurable Electronic Materials Inspired by Nonlinear Neuron Dynamics) Energy Frontier Research Center (EFRC), sponsored by the U.S. Department of Energy, housed at Texas A&M University where I collaborated under the guidance of Professors Raymundo Arroyave and Sarbajit Banerjee. Currently, I am a Research Assistant Professor at Texas A&M University, concurrently serving as the Director of Operations at the <a href="https://birdshot.tamu.edu/">BIRDSHOT Center</a>, dedicated to High-Throughput Materials Discovery for Extreme Conditions (HTMDEC).</p>
-          </p>
           <h3>Research Focus</h3>
           <ul>
             <li>Microstructure-sensitive Design of Materials</li>
@@ -84,7 +83,11 @@
         </div>
         
         <div class="col-sm-3 col-xs-6">
-        	<a href="#"><img class="img-responsive portfolio-item" src="http://placehold.it/500x300"></a>
+          <div class="text-center">
+            <a href="#" style="display: block;">
+              <p>Your Text Here</p>
+            </a>
+          </div>
         </div>
 
         <div class="col-sm-3 col-xs-6">
