--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
             <img class="img-responsive portfolio-item" src="images/solder_interconnect_interfacial_phase_growth.png" alt="Image Description" title="Cu/Sn/Cu Solder Interconnects" style="width: 500px; height: 300px;">
           </a>
         </div>
-        
+
         <div class="col-sm-3 col-xs-6">
-          <div class="text-center">
+          <div class="text-center bg-light p-3">
             <a href="#" style="display: block;">
-              <p>Your Text Here</p>
+              <p class="m-0">Thermoelectrics</p>
             </a>
           </div>
         </div>
