--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- Custom CSS for the '3 Col Portfolio' Template -->
     <link href="css/portfolio-item.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   </head>
 
   <body>
@@ -82,11 +83,15 @@
           </a>
         </div>
 
-        <div class="col-sm-3 col-xs-6">
-          <div class="text-center bg-light p-3">
-            <a href="#" style="display: block;">
-              <p class="m-0">Thermoelectrics</p>
-            </a>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-3 col-xs-6">
+              <div class="text-center bg-light p-3">
+                <a href="#" style="display: block;">
+                  <p class="m-0">Thermoelectrics</p>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
 
