--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Personal Research Website for Showcasing Research Projects and Group Members">
+    <meta name="author" content="Vahid Attari">
 
-    <title>Single Portfolio Item Template for Bootstrap 3</title>
+    <title>Attari Research Group</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
