--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@
         </div>
 
         <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
-          <div class="card-header">Header</div>
+          <div class="card-header">Materials Design</div>
           <div class="card-body">
             <h4 class="card-title">Primary card title</h4>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
         <div class="card text-white bg-secondary mb-3" style="max-width: 20rem;">
-          <div class="card-header">Header</div>
+          <div class="card-header">Thermoelectrics</div>
           <div class="card-body">
             <h4 class="card-title">Secondary card title</h4>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
         <div class="card text-white bg-success mb-3" style="max-width: 20rem;">
-          <div class="card-header">Header</div>
+          <div class="card-header">Electronic Interconnects</div>
           <div class="card-body">
             <h4 class="card-title">Success card title</h4>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
