--- a/index.html
+++ b/index.html
@@ -77,12 +77,6 @@
           <h3 class="page-header">Related Information</h3>
         </div>
 
-        <div class="col-sm-3 col-xs-6">
-          <a href="IMAGE_URL_HERE">
-            <img class="img-responsive portfolio-item" src="images/solder_interconnect_interfacial_phase_growth.png" alt="Image Description" title="Cu/Sn/Cu Solder Interconnects" style="width: 500px; height: 300px;">
-          </a>
-        </div>
-
         <div class="card text-white bg-primary mb-3 col-sm-3 col-xs-6">
           <div class="card-header">Materials Design</div>
           <div class="card-body">
@@ -97,14 +91,14 @@
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
-        <div class="card text-white bg-success mb-3" style="max-width: 20rem;">
+        <div class="card text-white bg-primary mb-3 col-sm-3 col-xs-6">
           <div class="card-header">Electronic Interconnects</div>
           <div class="card-body">
             <h4 class="card-title">Success card title</h4>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
         </div>
-        <div class="card text-white bg-danger mb-3" style="max-width: 20rem;">
+        <div class="card text-white bg-primary mb-3 col-sm-3 col-xs-6">
           <div class="card-header">Header</div>
           <div class="card-body">
             <h4 class="card-title">Danger card title</h4>
@@ -112,14 +106,6 @@
           </div>
         </div>
         
-        <div class="col-sm-3 col-xs-6">
-        	<a href="#"><img class="img-responsive portfolio-item" src="http://placehold.it/500x300"></a>
-        </div>
-
-        <div class="col-sm-3 col-xs-6">
-        	<a href="#"><img class="img-responsive portfolio-item" src="http://placehold.it/500x300"></a>
-        </div>
-
       </div>
 
       <div class="row">
