--- a/index.html
+++ b/index.html
@@ -81,28 +81,28 @@
           <div class="card-header">Materials Design</div>
           <div class="card-body">
             <h4 class="card-title">Primary card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Materials design involves tailoring the structure, composition, and properties of materials at different scales to achieve specific functionalities and performance characteristics.</p>
           </div>
         </div>
         <div class="card text-white bg-primary mb-3 col-sm-3 col-xs-6">
           <div class="card-header">Thermoelectrics</div>
           <div class="card-body">
             <h4 class="card-title">Secondary card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Thermoelectrics are crucial for power generation via converting waste heat into usable electricity, offering a sustainable and efficient way to harness energy.</p>
           </div>
         </div>
         <div class="card text-white bg-primary mb-3 col-sm-3 col-xs-6">
           <div class="card-header">Electronic Interconnects</div>
           <div class="card-body">
-            <h4 class="card-title">Success card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h4 class="card-title">Low-temperature solder development</h4>
+            <p class="card-text">The development of low-temperature solder is crucial in the electronic industry for enabling efficient and reliable soldering processes while minimizing heat-related damage to sensitive electronic components.</p>
           </div>
         </div>
         <div class="card text-white bg-primary mb-3 col-sm-3 col-xs-6">
-          <div class="card-header">Header</div>
+          <div class="card-header">Battery Cell Kinetics</div>
           <div class="card-body">
             <h4 class="card-title">Danger card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Understanding battery cell kinetics is crucial for optimizing energy harvesting efficiency and advancing battery technology.</p>
           </div>
         </div>
         
