--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="row">
 
         <div class="col-md-8">
-          <img class="img-responsive" src="http://placehold.it/750x500">
+          <img class="img-responsive" src="images/schematic8.jpg">
         </div>
 
         <div class="col-md-4">
