--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://startbootstrap.com">Start Bootstrap</a>
+          <a class="navbar-brand" href="https://vahid2364.github.io/">Home</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <div class="collapse navbar-fixed-top navbar-ex1-collapse">
           <ul class="nav navbar-nav">
             <li><a href="#about">About</a></li>
             <li><a href="#Research">Research</a></li>
@@ -45,7 +45,7 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h1 class="page-header">Attari Research Group <small>Meso-scale Modeling of Response of Materials</small></h1>
+          <h2 class="page-header">Attari Research Group <small>Meso-scale Modeling of Response of Materials</small></h2>
         </div>
 
       </div>
