--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
           <h2 class="page-header">Attari Research Group <small>Meso-scale Modeling of Response of Materials</small></h2>
         </div>
 
+        <div class="col-md-8">
+          <img class="img-fluid" src="images/schematic8.jpg" alt="Schematic Image">
+        </div>
+
       </div>
 
       <div class="row">
