--- a/index.html
+++ b/index.html
@@ -48,18 +48,16 @@
           <h2 class="page-header">Attari Research Group <small>Meso-scale Modeling of Response of Materials</small></h2>
         </div>
 
-        <div class="col-md-8">
-          <img class="img-fluid" src="images/schematic8.jpg" alt="Schematic Image">
-        </div>
+
 
       </div>
 
       <div class="row">
 
         <div class="col-md-8">
-          <img class="img-responsive" src="images/schematic8.jpg">
+          <img class="img-fluid" src="images/schematic8.jpg" alt="Research Schematic">
         </div>
-
+        
         <div class="col-md-4">
           <h3>Who We Are!</h3>
           <p>I have obtained my Ph.D. degree from the Texas A&M University under the supervision of Professor Raymundo Arroyave in 2019. Following my doctoral studies, I joined as a postdoctoral fellow at the group of Prof. Raymundo Arroyave. Later I continued my postdoctoral research at the <a href="https://remind.engr.tamu.edu/">reMIND</a> (Reconfigurable Electronic Materials Inspired by Nonlinear Neuron Dynamics) Energy Frontier Research Center (EFRC), sponsored by the U.S. Department of Energy, housed at Texas A&M University where I collaborated under the guidance of Professors Raymundo Arroyave and Sarbajit Banerjee. Currently, I am a Research Assistant Professor at Texas A&M University, concurrently serving as the Director of Operations at the <a href="https://birdshot.tamu.edu/">BIRDSHOT Center</a>, dedicated to High-Throughput Materials Discovery for Extreme Conditions (HTMDEC).</p>
