--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
     <!-- Custom CSS for the '3 Col Portfolio' Template -->
     <link href="css/portfolio-item.css" rel="stylesheet">
+    
+    <style>
+      .custom-small-text {
+        color: #ff5733; /* Your custom color code */
+      }
+    </style>
+    
   </head>
 
   <body>
@@ -45,7 +52,7 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h2 class="page-header">Attari Research Group <small>Meso-scale Modeling of Response of Materials</small></h2>
+          <h2 class="page-header">Attari Research Group: <small class="text-secondary">Meso-scale Modeling of Materials</small></h2>
         </div>
 
 
