--- a/index.html
+++ b/index.html
@@ -87,30 +87,30 @@
         </div>
 
         <div class="card text-white bg-primary mb-3 col-sm-3 col-xs-6">
-          <div class="card-header">Materials Design</div>
+          <div class="card-header">Computational Materials Design</div>
           <div class="card-body">
-            <h4 class="card-title">Primary card title</h4>
+            <h4 class="card-title">Microstructure-sensitive design</h4>
             <p class="card-text">Materials design involves tailoring the structure, composition, and properties of materials at different scales to achieve specific functionalities and performance characteristics.</p>
           </div>
         </div>
         <div class="card text-white bg-primary mb-3 col-sm-3 col-xs-6">
           <div class="card-header">Thermoelectrics</div>
           <div class="card-body">
-            <h4 class="card-title">Secondary card title</h4>
+            <h4 class="card-title">Harvesting Waste Heat: The Promise of Thermoelectric Materials</h4>
             <p class="card-text">Thermoelectrics are crucial for power generation via converting waste heat into usable electricity, offering a sustainable and efficient way to harness energy.</p>
           </div>
         </div>
         <div class="card text-white bg-primary mb-3 col-sm-3 col-xs-6">
           <div class="card-header">Electronic Interconnects</div>
           <div class="card-body">
-            <h4 class="card-title">Low-temperature solder development</h4>
+            <h4 class="card-title">Conductive Pathways: The Backbone of Electronics</h4>
             <p class="card-text">The development of low-temperature solder is crucial in the electronic industry for enabling efficient and reliable soldering processes while minimizing heat-related damage to sensitive electronic components.</p>
           </div>
         </div>
         <div class="card text-white bg-primary mb-3 col-sm-3 col-xs-6">
-          <div class="card-header">Battery Cell Kinetics</div>
+          <div class="card-header">Insights Into Battery Cell Kinetics</div>
           <div class="card-body">
-            <h4 class="card-title">Danger card title</h4>
+            <h4 class="card-title">Electrochemical Dynamics: Exploring Battery Cell Kinetics and Anode Innovations</h4>
             <p class="card-text">Understanding battery cell kinetics is crucial for optimizing energy harvesting efficiency and advancing battery technology.</p>
           </div>
         </div>
