--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-fixed-top navbar-ex1-collapse">
           <ul class="nav navbar-nav">
+            <a class="navbar-brand" href="https://vahid2364.github.io/">Home</a>
             <li><a href="#about">About</a></li>
             <li><a href="#Research">Research</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -49,6 +50,8 @@
 
     <div class="container">
 
+      <hr class="border-bottom">
+      
       <div class="row">
 
         <div class="col-lg-12">
@@ -95,7 +98,7 @@
             <p class="card-text">Materials design involves tailoring the structure, composition, and properties of materials at different scales to achieve specific functionalities and performance characteristics.</p>
           </div>
         </div>
-        <div class="card text-white bg-primary mb-3 col-sm-3 col-xs-6">
+        <div class="card text-white bg-secondary mb-3 col-sm-3 col-xs-6">
           <div class="card-header">Thermoelectrics</div>
           <div class="card-body">
             <h4 class="card-title">Harvesting Waste Heat: The Promise of Thermoelectric Materials</h4>
@@ -109,7 +112,7 @@
             <p class="card-text">The development of low-temperature solder is crucial in the electronic industry for enabling efficient and reliable soldering processes while minimizing heat-related damage to sensitive electronic components.</p>
           </div>
         </div>
-        <div class="card text-white bg-primary mb-3 col-sm-3 col-xs-6">
+        <div class="card text-white bg-secondary mb-3 col-sm-3 col-xs-6">
           <div class="card-header">Insights Into Battery Cell Kinetics</div>
           <div class="card-body">
             <h4 class="card-title">Electrochemical Dynamics: Exploring Battery Cell Kinetics and Anode Innovations</h4>
