--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
             <p class="card-text">Thermoelectrics are crucial for power generation via converting waste heat into usable electricity, offering a sustainable and efficient way to harness energy.</p>
           </div>
         </div>
-        <div class="card text-white bg-primary mb-3 col-sm-3 col-xs-6">
+        <div class="card text-white bg-success mb-3 col-sm-3 col-xs-6">
           <div class="card-header">Electronic Interconnects</div>
           <div class="card-body">
             <h4 class="card-title">Conductive Pathways: The Backbone of Electronics</h4>
             <p class="card-text">The development of low-temperature solder is crucial in the electronic industry for enabling efficient and reliable soldering processes while minimizing heat-related damage to sensitive electronic components.</p>
           </div>
         </div>
-        <div class="card text-white bg-secondary mb-3 col-sm-3 col-xs-6">
+        <div class="card text-white bg-info mb-3 col-sm-3 col-xs-6">
           <div class="card-header">Insights Into Battery Cell Kinetics</div>
           <div class="card-body">
             <h4 class="card-title">Electrochemical Dynamics: Exploring Battery Cell Kinetics and Anode Innovations</h4>
