--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+    <nav class="navbar bg-primary" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,6 +67,9 @@
         </div>
       </div>
     </nav>
+    
+
+
 
     <div class="container">
 
