--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <body>
 
-    <nav class="navbar navbar-expand bg-primary" data-bs-theme="dark">
+    <nav class="navbar navbar-expand bg-primary navbar-fixed-top navbar-inverse" data-bs-theme="dark" role="navigation">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,32 +68,6 @@
       </div>
     </nav>
     
-
-
-    <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="https://vahid2364.github.io/">Home</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-fixed-top navbar-ex1-collapse">
-          <ul class="nav navbar-nav">
-            <a class="navbar-brand" href="https://vahid2364.github.io/">Home</a>
-            <li><a href="#about">About</a></li>
-            <li><a href="#Research">Research</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
-    </nav>
-
     <div class="container">
 
       <hr class="border-bottom">
@@ -103,8 +77,6 @@
         <div class="col-lg-12">
           <h2 class="page-header">Attari Research Group: <small class="text-secondary">Meso-scale Modeling of Materials</small></h2>
         </div>
-
-
 
       </div>
 
