--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
 
     <nav class="navbar navbar-expand bg-primary navbar-fixed-top navbar-inverse" data-bs-theme="dark" role="navigation">
-      <div class="container-fluid">
+      <div class="container-fluid col-lg-12">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
