--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <nav class="navbar navbar-expand bg-primary navbar-fixed-top navbar-inverse" data-bs-theme="dark" role="navigation">
       <div class="container-fluid col-lg-12">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">RA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
