--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <hr class="border-bottom">
 
       <div class="row">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/CrystalGrain.jpg" class="img-fluid rounded-circle" alt="Microstructure Austenite" style="height: 200px; object-fit: cover;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/CrystalGrain.jpg" class="img-fluid rounded-circle" alt="Microstructure Austenite" style="height: 200px; object-fit: contain;">
       </div>
         
 
