--- a/index.html
+++ b/index.html
@@ -132,9 +132,20 @@
       
       <hr class="border-bottom">
 
-      <div class="row">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/c/cd/CrystalGrain.jpg" class="img-fluid rounded-circle" alt="Microstructure Austenite" style="height: 200px; object-fit: contain;">
-      </div>
+        <div class="row mx-0 flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-lg-6 text-lg-start">
+            <h1 class="display-5 fw-bold lh-1 mb-3">Microstructure Database</h1>
+            <p class="lead text-justify">The Open Phase-field Microstructure Database (OPMD) on Microstructures.Net offers curated microstructure data for easy access and advanced browsing. Presented in a user-friendly format, OPMD enhances visibility and accessibility. This database compiles detailed material compositions, including images and associated data, serving as a valuable resource for researchers and enthusiasts to explore complex material structures.
+            </p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <a href="datasets.html" class="btn btn-outline-success btn-lg px-4 me-md-2" role="button">Datasets</a>
+              <!--    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button> -->
+            </div>
+          </div>
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img href="https://microstructures.net/OPMD_database.png" class="d-block mx-lg-auto img-fluid" alt="OPMD database" loading="lazy">
+          </div>
+        </div>
         
 
     </div><!-- /.container -->
