--- a/index.html
+++ b/index.html
@@ -99,21 +99,21 @@
           <h3 class="page-header">Related Information</h3>
         </div>
 
-        <div class="card text-white bg-primary mb-3 col-sm-3 col-xs-6">
+        <div class="card text-white bg-primary col-sm-3 col-xs-6 mb-3 ">
           <div class="card-header">Computational Materials Design</div>
           <div class="card-body">
             <h4 class="card-title">Microstructure-sensitive design</h4>
             <p class="card-text">Materials design involves tailoring the structure, composition, and properties of materials at different scales to achieve specific functionalities and performance characteristics.</p>
           </div>
         </div>
-        <div class="card text-white bg-secondary mb-3 col-sm-3 col-xs-6">
+        <div class="card text-white bg-secondary col-sm-3 col-xs-6 mb-3 ">
           <div class="card-header">Thermoelectrics</div>
           <div class="card-body">
             <h4 class="card-title">Harvesting Waste Heat: The Promise of Thermoelectric Materials</h4>
             <p class="card-text">Thermoelectrics are crucial for power generation via converting waste heat into usable electricity, offering a sustainable and efficient way to harness energy.</p>
           </div>
         </div>
-        <div class="card text-white bg-success mb-3 col-sm-3 col-xs-6">
+        <div class="card text-white bg-success col-sm-3 col-xs-6 mb-3 ">
           <div class="card-header">Electronic Interconnects</div>
           <div class="card-body">
             <h4 class="card-title">Conductive Pathways: The Backbone of Electronics</h4>
