--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="row mx-0 flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-lg-6 text-lg-start">
             <h1 class="display-5 fw-bold lh-1 mb-3">Microstructure Database</h1>
-            <p class="lead text-justify">The Open Phase-field Microstructure Database (OPMD) on Microstructures.Net offers curated microstructure data for easy access and advanced browsing. Presented in a user-friendly format, OPMD enhances visibility and accessibility. This database compiles detailed material compositions, including images and associated data, serving as a valuable resource for researchers and enthusiasts to explore complex material structures.
+            <p class="lead text-justify">The Open Phase-field Microstructure Database (OPMD) on <a href="https://Microstructures.Net/">Microstructures.Net</a> offers curated microstructure data for easy access and advanced browsing. Presented in a user-friendly format, OPMD compiles detailed material compositions, material data, associated microstructure images and extracted microstructure metrics, serving as a valuable resource for researchers and enthusiasts to explore complex materials informatics methods.
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
               <a href="datasets.html" class="btn btn-outline-success btn-lg px-4 me-md-2" role="button">Datasets</a>
