--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
           </div>
           <div class="col-10 col-sm-8 col-lg-6">
-            <img href="https://microstructures.net/OPMD_database.png" class="d-block mx-lg-auto img-fluid" alt="OPMD database" loading="lazy">
+            <img src="https://microstructures.net/OPMD_database.png" class="d-block mx-lg-auto img-fluid" alt="OPMD database" loading="lazy">
           </div>
         </div>
         
