--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <p class="lead text-justify">The Open Phase-field Microstructure Database (OPMD) on <a href="https://Microstructures.Net/">Microstructures.Net</a> offers curated microstructure data for easy access and advanced browsing. Presented in a user-friendly format, OPMD compiles detailed material compositions, material data, associated microstructure images and extracted microstructure metrics, serving as a valuable resource for researchers and enthusiasts to explore complex materials informatics methods.
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <a href="datasets.html" class="btn btn-outline-success btn-lg px-4 me-md-2" role="button">Datasets</a>
+              <a href="https://microstructures.net/datasets.html" class="btn btn-outline-success btn-lg px-4 me-md-2" role="button">Datasets</a>
               <!--    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button> -->
             </div>
           </div>
