--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <nav class="navbar navbar-expand bg-primary navbar-fixed-top navbar-inverse" data-bs-theme="dark" role="navigation">
       <div class="container-fluid col-lg-12">
-        <a class="navbar-brand" href="#">RA</a>
+        <a class="navbar-brand" href="#">VA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,7 +47,7 @@
               <a class="nav-link" href="#">Members</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
           <form class="d-flex">
