--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="research.html">Research</a>
@@ -40,9 +40,9 @@
           <li class="nav-item">
             <a class="nav-link" href="publications.html">Publications</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
+          <a class="nav-link active" href="contact.html">Contact
+            <span class="visually-hidden">(current)</span>
+          </a>
         </ul>
       </div>
     </nav>
