--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h3 class="page-header">Related Information</h3>
+          <h3 class="page-header">Related Information:</h3>
         </div>
 
         <div class="card text-white bg-primary col-sm-3 col-xs-6 mb-3 ">
