--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Personal Research Website for Showcasing Research Projects and Group Members">
     <meta name="author" content="Vahid Attari">
 
-    <title>Attari Research Group</title>
+    <title>Materials Insight Research Group</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
