--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h2 class="page-header">Attari Research Group: <small class="text-secondary">Meso-scale Modeling of Materials</small></h2>
+          <h2 class="page-header">Materials Insight Research Group: <small class="text-secondary">Meso-scale Modeling of Materials</small></h2>
         </div>
 
       </div>
