--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="#">Research</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Publications</a>
+              <a class="nav-link" href="publications.html">Publications</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Members</a>
