--- a/publications.html
+++ b/publications.html
@@ -71,13 +71,18 @@
       <div class="row">
         <div class="col-lg-12">
           <h3>Recent Publications</h3>
-          <ul>
+          <ol>
             <li><strong>2024</strong> - <em>Attari, V., Banerjee, S., Arroyave, R.</em> "On the Kinetics of Electrodeposition in a Magnesium Metal Anode." <a href="https://doi.org/10.1016/j.actamat.2024.120089">Acta Materialia</a></li>
             <li><strong>2024</strong> - <em>Munoz, E.J., Attari, V., Martinez, M., Dickerson, M., Radovic, M., Arroyave, R.</em> "Phase-field model of silicon carbide growth during isothermal condition." <a href="https://doi.org/10.1016/j.commatsci.2024.113058">Computational Materials Science</a></li>
             <li><strong>2024</strong> - <em>Mulukutla, M., Attari, V., et al.</em> "Illustrating an Effective Workflow for Accelerated Materials Discovery." <a href="https://doi.org/10.1007/s40192-024-00357-3">Integrating Materials and Manufacturing Innovation</a></li>
             <li><strong>2024</strong> - <em>Sheikh, S., Attari, V., et al.</em> "Exploring chemistry and additive manufacturing design spaces: A perspective on computationally-guided design of printable alloys." <a href="https://doi.org/10.1080/21663831.2024.2316204">Materials Research Letters</a></li>
             <li><strong>2023</strong> - <em>Attari, V., Khatamsaz, D., Allaire, D., Arroyave, R.</em> "Towards Inverse Microstructure-Centered Materials Design using Generative Phase-field Modeling and Deep Variational AutoEncoders." <a href="https://doi.org/10.1016/j.actamat.2023.119204">Acta Materialia</a></li>
             <li><strong>2023</strong> - <em>Khatamsaz, D., Attari, V., et al.</em> "Efficient Propagation of Uncertainty via Reordering Monte Carlo Samples." <a href="https://arxiv.org/abs/2302.04945">arXiv</a></li>
+            <li><strong>2022</strong> - <em>Attari, V., Arroyave, R.</em> "Machine learning-assisted high-throughput exploration of interface energy space in multi-phase-field model with CALPHAD potential." <a href="https://doi.org/10.1186/s41313-021-00038-0">Materials Theory</a></li>
+            <li><strong>2022</strong> - <em>Honarmandi, P., Attari, V., Arroyave, R.</em> "Accelerated materials design using batch Bayesian optimization: A case study for solving the inverse problem from materials microstructure to process specification." <a href="https://doi.org/10.1016/j.commatsci.2022.111417">Computational Materials Science</a></li>
+            <li><strong>2022</strong> - <em>Kunselman, C., Sheikh, S., Attari, V., et al.</em> "Microstructure classification in the unsupervised context." <a href="https://doi.org/10.1016/j.actamat.2021.117434">Acta Materialia</a></li>
+            <li><strong>2021</strong> - <em>Salas, D., Attari, V., Arroyave, R.</em> "Competing interactions between mesoscale length-scales, order-disorder, and martensitic transformation in ferromagnetic shape memory alloys." <a href="https://doi.org/10.1016/j.actamat.2020.116616">Acta Materialia</a></li>
+            <li><strong>2021</strong> - <em>Barta, N.E., Attari, V., Arroyave, R.</em> "Fabrication and characterization of aluminum-magnetic shape memory alloy composites." <a href="https://doi.org/10.1016/j.msea.2020.140549">Materials Science and Engineering: A</a></li>
             <li><strong>2020</strong> - <em>Karayagiz, K., Attari, V., et al.</em> "Finite interface dissipation phase field modeling of Ni–Nb under additive manufacturing conditions." <a href="https://doi.org/10.1016/j.actamat.2019.11.057">Acta Materialia</a></li>
             <li><strong>2020</strong> - <em>Kunselman, C., Attari, V., et al.</em> "Semi-supervised learning approaches to class assignment in ambiguous microstructures." <a href="https://doi.org/10.1016/j.actamat.2020.01.046">Acta Materialia</a></li>
             <li><strong>2020</strong> - <em>Attari, V., Honarmandi, P., et al.</em> "Uncertainty propagation in a multiscale CALPHAD-reinforced elastochemical phase-field model." <a href="https://doi.org/10.1016/j.actamat.2019.11.031">Acta Materialia</a></li>
@@ -86,7 +91,7 @@
             <li><strong>2018</strong> - <em>Yi, S., Attari, V., et al.</em> "Strain-induced suppression of the miscibility gap in nanostructured Mg2Si–Mg2Sn solid solutions." <a href="https://doi.org/10.1039/C8TA05798B">Journal of Materials Chemistry A</a></li>
             <li><strong>2018</strong> - <em>Attari, V., Ghosh, S., Arroyave, R.</em> "On the interfacial phase growth and vacancy evolution during accelerated electromigration in Cu/Sn/Cu microjoints." <a href="https://doi.org/10.1016/j.actamat.2018.08.049">Acta Materialia</a></li>
             <li><strong>2016</strong> - <em>Attari, V., Arroyave, R.</em> "Phase field modeling of joint formation during isothermal solidification in 3DIC micro packaging." <a href="https://doi.org/10.1007/s11669-016-0475-x">Journal of Phase Equilibria and Diffusion</a></li>
-          </ul>
+            </ol>
         </div>
       </div>
 
