--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Research</a>
+              <a class="nav-link" href="research.html">Research</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="publications.html">Publications</a>
