research page updated

--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Research</a>
+              <a class="nav-link" href="research.html">Research</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="publications.html">Publications</a>
@@ -101,7 +101,7 @@
         
         <!-- Responsive Image Container -->
         <div class="row justify-content-center">
-          <div class="col-12 col-md-8 col-lg-6">
+          <div class="col-12 col-md-8 col-lg-10">
             <div class="card">
               <img src="images/PSP_Quantification_Strategy.jpg" alt="The process-structure-property uncertainty propagation framework deployed in composition, strain and temperature space based on the process definition and natural uncertainties in input parameters." class="img-fluid card-img-top">
               <div class="card-body">
